[gd_scene load_steps=6 format=2]

[ext_resource path="res://Player/Inventory/InventoryScreen.gd" type="Script" id=1]
[ext_resource path="res://Player/Inventory/Inventory.gd" type="Script" id=2]
[ext_resource path="res://Player/Inventory/UIInputHandler.gd" type="Script" id=3]
[ext_resource path="res://Player/Inventory/Slot.tscn" type="PackedScene" id=4]
[ext_resource path="res://Player/Inventory/ItemInfo.tscn" type="PackedScene" id=5]

[node name="InventoryScreen" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Inventory" type="Node" parent="."]
script = ExtResource( 2 )

[node name="UIInputHandler" type="Node" parent="."]
script = ExtResource( 3 )

[node name="BG" type="Panel" parent="."]
margin_left = 72.0
margin_top = 16.0
margin_right = 272.0
margin_bottom = 184.0

[node name="SlotsContainer" type="GridContainer" parent="."]
margin_left = 104.0
margin_top = 32.0
margin_right = 232.0
margin_bottom = 160.0
custom_constants/vseparation = 8
custom_constants/hseparation = 8
columns = 4

[node name="Slot1Button" parent="SlotsContainer" instance=ExtResource( 4 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 26.0
margin_bottom = 26.0

[node name="Slot2Button" parent="SlotsContainer" instance=ExtResource( 4 )]
margin_left = 34.0
margin_top = 0.0
margin_right = 60.0
margin_bottom = 26.0

[node name="Slot3Button" parent="SlotsContainer" instance=ExtResource( 4 )]
margin_left = 68.0
margin_top = 0.0
margin_right = 94.0
margin_bottom = 26.0

[node name="Slot4Button" parent="SlotsContainer" instance=ExtResource( 4 )]
margin_left = 102.0
margin_top = 0.0
margin_right = 128.0
margin_bottom = 26.0

[node name="Slot5Button" parent="SlotsContainer" instance=ExtResource( 4 )]
margin_left = 0.0
margin_top = 34.0
margin_right = 26.0
margin_bottom = 60.0

[node name="Slot6Button" parent="SlotsContainer" instance=ExtResource( 4 )]
margin_left = 34.0
margin_top = 34.0
margin_right = 60.0
margin_bottom = 60.0

[node name="Slot7Button" parent="SlotsContainer" instance=ExtResource( 4 )]
margin_left = 68.0
margin_top = 34.0
margin_right = 94.0
margin_bottom = 60.0

[node name="Slot8Button" parent="SlotsContainer" instance=ExtResource( 4 )]
margin_left = 102.0
margin_top = 34.0
margin_right = 128.0
margin_bottom = 60.0

[node name="Slot9Button" parent="SlotsContainer" instance=ExtResource( 4 )]
margin_left = 0.0
margin_top = 68.0
margin_right = 26.0
margin_bottom = 94.0

[node name="Slot10Button" parent="SlotsContainer" instance=ExtResource( 4 )]
margin_left = 34.0
margin_top = 68.0
margin_right = 60.0
margin_bottom = 94.0

[node name="Slot11Button" parent="SlotsContainer" instance=ExtResource( 4 )]
margin_left = 68.0
margin_top = 68.0
margin_right = 94.0
margin_bottom = 94.0

[node name="Slot12Button" parent="SlotsContainer" instance=ExtResource( 4 )]
margin_left = 102.0
margin_top = 68.0
margin_right = 128.0
margin_bottom = 94.0

[node name="Slot13Button" parent="SlotsContainer" instance=ExtResource( 4 )]
margin_left = 0.0
margin_top = 102.0
margin_right = 26.0
margin_bottom = 128.0

[node name="Slot14Button" parent="SlotsContainer" instance=ExtResource( 4 )]
margin_left = 34.0
margin_top = 102.0
margin_right = 60.0
margin_bottom = 128.0

[node name="Slot15Button" parent="SlotsContainer" instance=ExtResource( 4 )]
margin_left = 68.0
margin_top = 102.0
margin_right = 94.0
margin_bottom = 128.0

[node name="Slot16Button" parent="SlotsContainer" instance=ExtResource( 4 )]
margin_left = 102.0
margin_top = 102.0
margin_right = 128.0
margin_bottom = 128.0

[node name="ItemInfo" parent="." instance=ExtResource( 5 )]
visible = false

[connection signal="pressed" from="SlotsContainer/Slot1Button" to="UIInputHandler" method="_on_Slot1Button_pressed" binds= [ 0 ]]
[connection signal="pressed" from="SlotsContainer/Slot2Button" to="UIInputHandler" method="_on_Slot1Button_pressed" binds= [ 1 ]]
[connection signal="pressed" from="SlotsContainer/Slot3Button" to="UIInputHandler" method="_on_Slot1Button_pressed" binds= [ 2 ]]
